# waydroid-better-sensors

./: CMakeLists.txt  README.md  service.cpp
